update swagger & errors
