# internal/http/handlers/users.go
@@ -1,13 +1,25 @@
 package handlers
 
 import (
+	"errors"
 	"net/http"
 	"pr-review/internal/http/dto"
+	"pr-review/internal/usecases"
 
 	"github.com/go-chi/render"
 	"github.com/google/uuid"
 )
 
+// UserSetIsActive godoc
+// @Summary Установить флаг активности пользователя
+// @Param request body dto.SetIsActiveRequest true "Установка пользователя активным/неактивным"
+// @Produce json
+// @Success 200 {object} dto.SetIsActiveResponse
+// @Failure 400 {object} dto.ErrorResponse "Неверный запрос"
+// @Failure 404 {object} dto.ErrorResponse "Пользователь не найден"
+// @Failure 500 {object} dto.ErrorResponse "Внутренняя ошибка"
+// @Router /users/setIsActive [post]
+// @Tags Users
 func (h *Handlers) UserSetIsActive() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Header.Get("Content-Type") != "application/json" {
@@ -30,6 +42,11 @@ func (h *Handlers) UserSetIsActive() http.HandlerFunc {
 
 		user, err := h.uc.UserSetIsActive(r.Context(), &req)
 		if err != nil {
+			if errors.Is(err, usecases.ErrUserNotFound) {
+				w.WriteHeader(http.StatusNotFound)
+				render.JSON(w, r, dto.ErrUserNotFound)
+				return
+			}
 			w.WriteHeader(http.StatusInternalServerError)
 			render.JSON(w, r, dto.ErrInternal)
 			return
@@ -42,6 +59,16 @@ func (h *Handlers) UserSetIsActive() http.HandlerFunc {
 	}
 }
 
+// GetUserReviews godoc
+// @Summary Получить PR'ы, где пользователь назначен ревьювером
+// @Param user_id query string true "Идентификатор пользователя"
+// @Produce json
+// @Success 200 {object} dto.GetReviewResponse
+// @Failure 400 {object} dto.ErrorResponse "Неверный запрос"
+// @Failure 404 {object} dto.ErrorResponse "Пользователь не найден"
+// @Failure 500 {object} dto.ErrorResponse "Внутренняя ошибка"
+// @Router /users/getReview [get]
+// @Tags Users
 func (h *Handlers) GetUserReviews() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		userId := r.URL.Query().Get("user_id")
@@ -58,6 +85,11 @@ func (h *Handlers) GetUserReviews() http.HandlerFunc {
 
 		reviews, err := h.uc.GetReviewers(r.Context(), userId)
 		if err != nil {
+			if errors.Is(err, usecases.ErrUserNotFound) {
+				w.WriteHeader(http.StatusNotFound)
+				render.JSON(w, r, dto.ErrUserNotFound)
+				return
+			}
 			w.WriteHeader(http.StatusInternalServerError)
 			render.JSON(w, r, dto.ErrInternal)
 			return
